--- a/tools/urt/tools/quake3/q3map2/q3map2_urt.vcxproj
+++ b/tools/urt/tools/quake3/q3map2/q3map2_urt.vcxproj
@@ -131,6 +131,7 @@
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
       <DataExecutionPrevention />
       <TargetMachine>MachineX86</TargetMachine>
+      <GenerateDebugInformation>false</GenerateDebugInformation>
     </Link>
     <Bscmake>
       <SuppressStartupBanner>true</SuppressStartupBanner>
